# python-clean-architecture

./: .flake8  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 93256f344533_create_leads_table.py
app/: main.py
app/api/: api.py  application_container.py  dependencies.py
app/api/routes/: users_route.py
app/core/: cache.py  config.py  core_container.py  database.py
app/infrastructure/: infrastructure_container.py
app/infrastructure/auth/: auth.py
app/infrastructure/cache/: redis.py
app/infrastructure/repositories/: user_repository.py
app/models/: user_model.py
app/schemas/: user_schema.py
app/services/: create_user_service.py  exception_service.py  response_service.py  service_container.py
app/tests/: test_create_user_service.py
src/: app.py
src/api/: __init__.py
src/api/routes/: health.py
src/config/: settings.py
src/schemas/: reponse.py
